samples/_failures_safe/1761649322_d34351_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_090e9abe.c: In function ‘main’:
./samples/SAFE/__tmp_090e9abe.c:169:27: error: incompatible types when initializing type ‘State’ using type ‘StateMachine *’
  169 |         State old_state = sm
      |                           ^~
./samples/SAFE/__tmp_090e9abe.c:169:9: error: expected ‘,’ or ‘;’ at end of input
  169 |         State old_state = sm
      |         ^~~~~
./samples/SAFE/__tmp_090e9abe.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_090e9abe.c:169:9: error: expected declaration or statement at end of input
